--- a/src/styles/Table.css
+++ b/src/styles/Table.css
@@ -19,8 +19,14 @@
 .informations {
     display:flex;
     flex-direction: row;
+    height: 400px;
     justify-content: space-around;
-    width: 50%;
     border: 1px solid black;
 }
 
+.input-header {
+    margin-left: 800px;
+    width: 400px;
+    display: flex;
+    justify-content: center;
+}
