--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -1,6 +1,48 @@
+body {
+    background-color: #282828;
+}
+
+section {
+    height: 500px;
+    width: 600px;
+
+    margin-left: auto;
+    margin-right: auto;
+    
+
+
+    box-shadow: 6px 5px 19px rgb(81, 93, 79);
+    border: 2px solid none;
+    background: rgb(52,52,51);
+    background: linear-gradient(109deg, rgba(52,52,51,1) 10%, rgba(23,20,20,1) 70%);
+    border-radius: 30px;
+
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    
+}
+
+input {
+    background-color: #282828;
+    border-radius: 10px;
+    height: 26px;
+    color: white;
+    border: 1px solid gray ;
+}
+
+button {
+    background-color: #199F5D;
+    border-radius: 10px;
+    height: 26px;
+    border: 1px none;
+}
+
 .image-login {
     width: 100px;
     display:flex;
+    border-radius: 10px;
     margin-right: auto;
     margin-left: auto;
 }
@@ -8,26 +50,28 @@
 .input-email {
     display:flex;
     margin-right: auto;
-    width: 260px;
+    width: 280px;
     margin-left: auto; 
     margin-top: 10px;
 }
 
 .input-password {
     display:flex;
-    width: 260px;
+    width: 280px;
     margin-right: auto;
     margin-left: auto; 
     margin-top: 10px;
 }
 
 .button-login {
-    display:flex;
-    width: 80px;
-    text-align: center;
+    width: 90px;
+    font-size: 13px;
+   
+    color: white;
+    letter-spacing:1px;
     margin-right: auto;
     margin-left: auto; 
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
 .label-email{
@@ -38,5 +82,5 @@
 }
 
 .login {
-    margin-top: 300px;
+    margin-top: 240px;
 }
