--- a/src/styles/Form.css
+++ b/src/styles/Form.css
@@ -2,8 +2,13 @@
   background: #3D3D3D; 
 }
 
+.mainForm{
+  width: 40%;
+  margin: 20px auto;
+  display: flex;
+}
+
 #firsForm, #secondForm{
-  width: 80%;
   margin: 50px auto;
   color: white;
   text-align: center;
@@ -17,7 +22,7 @@
   box-sizing: border-box;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.13);
   border-radius: 10px;
-  width: 800px;
+  width:450px;
   margin-bottom: 20px;
 }
 
@@ -26,15 +31,15 @@ label {
 }
 
 .smallInput {
-  width: 350px;
+  width: 180px;
 }
 
 #inputName {
-  width: 500px;
+  width: 300px;
 }
 
 #inputAge {
-  width: 180px;
+  width: 120px;
 }
 
 .InputForm:focus {
@@ -52,6 +57,7 @@ label {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.13);
   border-radius: 15px;
   margin-top: 20px;
+  transition: all ease 0.3s;
 }
 
 .BlueButton:hover {
@@ -65,13 +71,14 @@ label {
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   input[type='range'] {
     overflow: hidden;
-    width: 250px;
+    width: 210px;
     -webkit-appearance: none;
     background-color: #282828;
     border: 1px solid #696565;
     box-sizing: border-box;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.13);
     border-radius: 10px;
+    margin-right: 5px;
   }
   
   input[type='range']::-webkit-slider-runnable-track {
@@ -89,4 +96,9 @@ label {
     background: #199F5D;
     box-shadow: -250px 0 0 250px #199F5D;
   }
+}
+
+.partidas {
+  margin: 5px 0px 10px 35px;
+  text-align: left;
 }
