--- a/src/styles/Form.css
+++ b/src/styles/Form.css
@@ -4,8 +4,10 @@
   padding: 0px; 
 }
 
-input, textarea, label, select{
+.mainForm {
+  background: #3D3D3D;
   width: 100%;
+  height: 100%;
 }
 
 #firstForm, #secondForm {
@@ -22,10 +24,7 @@ input, textarea, label, select{
   box-sizing: border-box;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.13);
   border-radius: 10px;
-}
-
-label {
-  text-align: left;
+  width: 100%;
 }
 
 .InputForm:focus {
@@ -34,6 +33,12 @@ label {
   box-sizing: border-box;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.13);
 }
+
+label {
+  text-align: left;
+  width: 100%;
+}
+
 
 .BlueButton, .GreenButton {
   color: white;
