--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -49,6 +49,7 @@ button {
     border-radius: 10px;
     margin-right: auto;
     margin-left: auto;
+    background: none;
 }
 
 .input-email {
@@ -70,7 +71,6 @@ button {
 .button-login {
     width: 90px;
     font-size: 13px;
-   
     color: white;
     letter-spacing:1px;
     margin-right: auto;
@@ -81,10 +81,15 @@ button {
 .label-email{
     display:flex;
     flex-direction:column;
-    
-
+    background: none;
 }
 
 .login {
     margin-top: 240px;
+    background-color: none;
 }
+
+label {
+    background: none;
+}
+
