--- a/src/styles/Table.css
+++ b/src/styles/Table.css
@@ -1,8 +1,20 @@
-.input-header {
-  margin-left: 800px;
-  width: 400px;
-  display: flex;
-  justify-content: center;
+.inputSearch {
+  color: white;
+  margin: 2% 2% 2% 50%;
+  padding: 5px 20px;
+  background: #282828;
+  border: 1px solid #696565;
+  box-sizing: border-box;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.13);
+  border-radius: 10px;
+  width: 40%;
+}
+
+.inputSearch:focus {
+  outline: 0;
+  border: 1px solid #1D5EFF;
+  box-sizing: border-box;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.13);
 }
 
 .playersTable {
@@ -16,13 +28,10 @@
   font-size: 20px;
 }
 
-.tableRow {
+.tableRow, .playerRow {
   border-bottom: 1px solid white;
 }
 
-.playerRow {
-  border-bottom: 1px solid white;
-}
 
 tr.playerRow:hover {
   border: 2px solid #199F5D;
