--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -1,20 +1,40 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
 body {
-    background-color: #282828;
+    background-color:  #282828 !important;
 }
 
-img {
-    border: 2px solid rgb(93, 122, 88);
+#root {
+    width: 100%;
+    height: 100%;
+    
 }
 
-section {
+.login-bg{
+    width: 100%;
+    height: 100%;
+    
+}
+
+/* .login {
+    margin-top: 240px;
+    background-color:#282828;
+} */
+
+.login  {
+
+    margin-top: 240px;
+   /*  background-color:#282828; */
+
     height: 500px;
     width: 600px;
-
     margin-left: auto;
     margin-right: auto;
-    
-
-
     box-shadow: 6px 5px 19px rgb(93, 122, 88);
     border: 2px solid none;
     background: rgb(52,52,51);
@@ -28,22 +48,23 @@ section {
     
 }
 
-input {
+/* input {
     background-color: #282828;
     border-radius: 10px;
     height: 26px;
     color: white;
     border: 1px solid gray ;
-}
+} */
 
-button {
+/* button {
     background-color: #199F5D;
     border-radius: 10px;
     height: 26px;
     border: 1px none;
-}
+} */
 
 .image-login {
+    border: 2px solid rgb(93, 122, 88);
     width: 100px;
     display:flex;
     border-radius: 10px;
@@ -52,6 +73,12 @@ button {
 }
 
 .input-email {
+    padding-left: 7px;
+    background-color: #282828;
+    border-radius: 10px;
+    height: 26px;
+    color: white;
+    border: 1px solid gray ;
     display:flex;
     margin-right: auto;
     width: 280px;
@@ -60,6 +87,12 @@ button {
 }
 
 .input-password {
+    background-color: #282828;
+    border-radius: 10px;
+    height: 26px;
+    color: white;
+    border: 1px solid gray ;
+    padding-left: 7px;
     display:flex;
     width: 280px;
     margin-right: auto;
@@ -68,9 +101,12 @@ button {
 }
 
 .button-login {
+    background-color: #199F5D;
+    border-radius: 10px;
+    height: 26px;
+    border: 1px none;
     width: 90px;
     font-size: 13px;
-   
     color: white;
     letter-spacing:1px;
     margin-right: auto;
@@ -81,10 +117,4 @@ button {
 .label-email{
     display:flex;
     flex-direction:column;
-    
-
-}
-
-.login {
-    margin-top: 240px;
 }
