--- a/src/styles/Table.css
+++ b/src/styles/Table.css
@@ -17,10 +17,17 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.13);
 }
 
+.container-table {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+}
+
 .playersTable {
   color: white;
-  width: 80%;
-  margin: 25px auto;
+  width: 100%;
+  /* margin: 25px auto; */
   padding: 10px;
 }
 
@@ -42,4 +49,6 @@ tr.playerRow:hover {
   background-color: #3D3D3D;
   color: white;
   font-size: 25px;
+  border: none;
+  background: none;
 }
