refact: CSS login page

--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -4,64 +4,28 @@
     box-sizing: border-box;
 }
 
-
-body {
-    background-color: #3D3D3D !important;
-}
-
-#root {
-    width: 100%;
-    height: 100%;
-    
-}
-
 .login-bg{
-    width: 100%;
-    height: 100%;
-    
+    width: 100vw;
+    height: 100vh;
+    background-color: #282828;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-/* .login {
-    margin-top: 240px;
-    background-color:#282828;
-} */
-
-.login  {
-
-    margin-top: 240px;
-   /*  background-color:#282828; */
-
-    height: 500px;
-    width: 600px;
-    margin-left: auto;
-    margin-right: auto;
+.login {
+    height: 60vh;
+    width: 40vw;
     box-shadow: 6px 5px 19px rgb(93, 122, 88);
     border: 2px solid none;
     background: rgb(52,52,51);
     background: linear-gradient(109deg, rgba(52,52,51,1) 10%, rgba(23,20,20,1) 70%);
     border-radius: 30px;
-
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    
 }
-
-/* input {
-    background-color: #282828;
-    border-radius: 10px;
-    height: 26px;
-    color: white;
-    border: 1px solid gray ;
-} */
-
-/* button {
-    background-color: #199F5D;
-    border-radius: 10px;
-    height: 26px;
-    border: 1px none;
-} */
 
 .image-login {
     border: 2px solid rgb(93, 122, 88);
@@ -82,7 +46,7 @@ body {
     border: 1px solid gray ;
     display:flex;
     margin-right: auto;
-    width: 280px;
+    width: 100%;
     margin-left: auto; 
     margin-top: 10px;
 }
@@ -95,7 +59,7 @@ body {
     border: 1px solid gray ;
     padding-left: 7px;
     display:flex;
-    width: 280px;
+    width: 100%;
     margin-right: auto;
     margin-left: auto; 
     margin-top: 10px;
@@ -119,11 +83,7 @@ body {
     display:flex;
     flex-direction:column;
     background: none;
-}
-
-.login {
-    margin-top: 240px;
-    background-color: none;
+    width: 80%;
 }
 
 label {
